Add interactive widget support and clean up header visibility in Hentsch Manifold Explorer

--- a/hentsch_manifold_explorer.ipynb
+++ b/hentsch_manifold_explorer.ipynb
@@ -90,6 +90,7 @@
    ],
    "source": [
     "# --- Hentsch Manifold Explorer script ---\n",
+    "%matplotlib widget\n",
     "# ==============================================================================\n",
     "# IMPORTS\n",
     "# ==============================================================================\n",
@@ -258,11 +259,7 @@
     "import matplotlib.pyplot as plt\n",
     "fig = plt.figure(figsize=CFG[\"figsize\"], dpi=CFG[\"dpi\"])\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
-    "# Hide the ipympl header if the attribute exists (Voila safe)\n",
-    "try:\n",
-    "    plt.gcf().canvas.header_visible = False\n",
-    "except AttributeError:\n",
-    "    pass  # running outside ipympl (e.g. Agg/inline) – nothing to hide\n",
+    "plt.gcf().canvas.header_visible = False\n",
     "\n",
     "def make_plot(projection_type, elevation, azimuth, theta_deg, epsilon, quadratic_value, scale_factor, s_value, quiver_num, refresh_token=None):\n",
     "    global Rmat\n",
