--- a/hentsch_manifold_explorer.ipynb
+++ b/hentsch_manifold_explorer.ipynb
@@ -90,7 +90,7 @@
    ],
    "source": [
     "# --- Hentsch Manifold Explorer script ---\n",
-    "%matplotlib widget\n",
+    "\n",
     "# ==============================================================================\n",
     "# IMPORTS\n",
     "# ==============================================================================\n",
@@ -259,7 +259,11 @@
     "import matplotlib.pyplot as plt\n",
     "fig = plt.figure(figsize=CFG[\"figsize\"], dpi=CFG[\"dpi\"])\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
-    "plt.gcf().canvas.header_visible = False\n",
+    "# Hide ipympl toolbar if available (safe for Voila)\n",
+    "try:\n",
+    "    plt.gcf().canvas.header_visible = False\n",
+    "except AttributeError:\n",
+    "    pass\n",
     "\n",
     "def make_plot(projection_type, elevation, azimuth, theta_deg, epsilon, quadratic_value, scale_factor, s_value, quiver_num, refresh_token=None):\n",
     "    global Rmat\n",
@@ -773,7 +777,7 @@
     ")\n",
     "\n",
     "# display UI and plot\n",
-    "display(controls)\n",
+    "display(linked_out)\n",
     "plt.show()\n"
    ]
   }
