--- a/hentsch_manifold_explorer.ipynb
+++ b/hentsch_manifold_explorer.ipynb
@@ -697,7 +697,6 @@
     "                cmap=field_cmap, norm=norm_mag, array=mag,\n",
     "                linewidth=0.8, alpha=0.9)\n",
     "\n",
-    "    plt.show()\n",
     "# ==============================================================================\n",
     "# --- widget definitions ---\n",
     "refresh_slider = widgets.IntSlider(value=0, min=0, max=1000000, step=1, description='⟳')\n",
@@ -777,8 +776,8 @@
     ")\n",
     "\n",
     "# display UI and plot\n",
-    "display(linked_out)\n",
-    "plt.show()\n"
+    "display(controls)\n",
+    "display(linked_out)\n"
    ]
   }
  ],
