Update model IDs and streamline plotting in Hentsch Manifold Explorer
- Changed model IDs for Jupyter widgets to new identifiers.
- Removed unnecessary newline in the source code section.
- Simplified the hiding of the ipympl toolbar for compatibility with Voila.
- Added a basic plot example using matplotlib to demonstrate functionality.

--- a/hentsch_manifold_explorer.ipynb
+++ b/hentsch_manifold_explorer.ipynb
@@ -51,7 +51,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0855197def6a4edc91e2a6fdc74b83ea",
+       "model_id": "8d0c7d3f141743e69354b590ca0fba92",
        "version_major": 2,
        "version_minor": 0
       },
@@ -65,7 +65,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4741d56155114288ad8ad14a1f7ff385",
+       "model_id": "3a3b569850774bb5b33abc1a3a64c1c4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -90,7 +90,6 @@
    ],
    "source": [
     "# --- Hentsch Manifold Explorer script ---\n",
-    "\n",
     "# ==============================================================================\n",
     "# IMPORTS\n",
     "# ==============================================================================\n",
@@ -259,11 +258,7 @@
     "import matplotlib.pyplot as plt\n",
     "fig = plt.figure(figsize=CFG[\"figsize\"], dpi=CFG[\"dpi\"])\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
-    "# Hide ipympl toolbar if available (safe for Voila)\n",
-    "try:\n",
-    "    plt.gcf().canvas.header_visible = False\n",
-    "except AttributeError:\n",
-    "    pass\n",
+    "plt.gcf().canvas.header_visible = False\n",
     "\n",
     "def make_plot(projection_type, elevation, azimuth, theta_deg, epsilon, quadratic_value, scale_factor, s_value, quiver_num, refresh_token=None):\n",
     "    global Rmat\n",
@@ -697,6 +692,13 @@
     "                cmap=field_cmap, norm=norm_mag, array=mag,\n",
     "                linewidth=0.8, alpha=0.9)\n",
     "\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    from IPython.display import display\n",
+    "\n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_subplot(111)\n",
+    "    ax.plot([1, 2], [3, 4])\n",
+    "    display(fig)\n",
     "# ==============================================================================\n",
     "# --- widget definitions ---\n",
     "refresh_slider = widgets.IntSlider(value=0, min=0, max=1000000, step=1, description='⟳')\n",
