Refactor plotting logic in Hentsch and Phase Portraits notebooks
- Commented out the ax.cla() line in the make_plot function of hentsch_manifold_explorer.ipynb to retain previous plot state.
- Added a new plotting section in both notebooks to create a simple plot ([1, 2], [3, 4]) for testing purposes.
- Updated display logic to ensure figures are shown correctly after plotting.
- Changed execution count to null in phase_portraits_explorer.ipynb to reset the cell state.

--- a/hentsch_manifold_explorer.ipynb
+++ b/hentsch_manifold_explorer.ipynb
@@ -103,6 +103,7 @@
     "from numpy.linalg import inv\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
+    "\n",
     "# ==============================================================================\n",
     "# CONFIGURATION (CFG)\n",
     "# ==============================================================================\n",
@@ -262,7 +263,7 @@
     "\n",
     "def make_plot(projection_type, elevation, azimuth, theta_deg, epsilon, quadratic_value, scale_factor, s_value, quiver_num, refresh_token=None):\n",
     "    global Rmat\n",
-    "    ax.cla()\n",
+    "    # ax.cla()\n",
     "    theta_rad = np.deg2rad(theta_deg)\n",
     "\n",
     "    # Recompute geometry-related bounds and ticks using scale_factor\n",
@@ -691,9 +692,6 @@
     "                length=0.1 * z_bound_pos, normalize=True, arrow_length_ratio=0.4,\n",
     "                cmap=field_cmap, norm=norm_mag, array=mag,\n",
     "                linewidth=0.8, alpha=0.9)\n",
-    "\n",
-    "    import matplotlib.pyplot as plt\n",
-    "    from IPython.display import display\n",
     "\n",
     "    fig = plt.figure()\n",
     "    ax = fig.add_subplot(111)\n",
