--- a/phase_portraits_explorer.ipynb
+++ b/phase_portraits_explorer.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "badda953",
    "metadata": {},
    "outputs": [
@@ -82,6 +82,7 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.collections import LineCollection\n",
     "from matplotlib import cm, colors\n",
+    "from IPython.display import display\n",
     "\n",
     "# ----------------------------------------------------------------------\n",
     "#  Constants\n",
@@ -485,12 +486,11 @@
     "    #  Save the figure\n",
     "    # --------------------------------------------------------------\n",
     "    fig.tight_layout() # adjust layout to fit\n",
-    "    if interactive:\n",
-    "        plt.show()\n",
-    "    elif save_fig:\n",
-    "        fig.savefig(outfile, dpi=300) # save as PNG\n",
-    "        fig.savefig(outfile.with_suffix('.svg')) # save as SVG\n",
-    "        plt.close(fig) # close the figure to free memory\n",
+    "\n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_subplot(111)\n",
+    "    ax.plot([1, 2], [3, 4])\n",
+    "    display(fig)\n",
     "\n",
     "\n",
     "# ----------------------------------------------------------------------\n",
@@ -580,7 +580,9 @@
     "        widgets.HBox([view_slider])\n",
     "    ])\n",
     "\n",
-    "    display(ui, out)\n"
+    "# display UI and plot\n",
+    "display(controls)\n",
+    "display(linked_out)\n"
    ]
   }
  ],
