Refactor plotting function to correctly initialize figure and axes, enhancing clarity and removing commented-out code.

--- a/hentsch_manifold_explorer.ipynb
+++ b/hentsch_manifold_explorer.ipynb
@@ -256,16 +256,15 @@
     "# ==============================================================================\n",
     "# PLOTTING FUNCTION\n",
     "# ==============================================================================\n",
-    "import matplotlib.pyplot as plt\n",
-    "fig = plt.figure(figsize=CFG[\"figsize\"], dpi=CFG[\"dpi\"])\n",
-    "ax = fig.add_subplot(111, projection='3d')\n",
-    "plt.gcf().canvas.header_visible = False\n",
     "\n",
     "def make_plot(projection_type, elevation, azimuth, theta_deg, epsilon, quadratic_value, scale_factor, s_value, quiver_num, refresh_token=None):\n",
     "    global Rmat\n",
-    "    fig = plt.figure()\n",
-    "    ax = fig.add_subplot(111)\n",
-    "    ax.plot([1, 2], [3, 4])\n",
+    "    fig = plt.figure(figsize=CFG[\"figsize\"], dpi=CFG[\"dpi\"])\n",
+    "    ax = fig.add_subplot(111, projection='3d')\n",
+    "    plt.gcf().canvas.header_visible = False\n",
+    "    # fig = plt.figure()\n",
+    "    # ax = fig.add_subplot(111)\n",
+    "    # ax.plot([1, 2], [3, 4])\n",
     "    # ax.cla()\n",
     "    theta_rad = np.deg2rad(theta_deg)\n",
     "\n",
